# PicoStageDriver

./: Assembly.md  BOM.md  Calibration.md  README.md
MechanicalDrawings/: DisplayInsert.ipt  Encoder Knob.ipt  Encoder Knob.step  Encoder Knob.stl  JoystickInsert.ipt  Motor Controller Back Panel.f3d  Motor Controller Back Panel.step  Motor Controller Front Panel.f3d  Motor Controller Front Panel.step  README.md  RJ45Adapter.ipt  RJ45Adapter.step  RJ45Adapter.stl  RJ45Insert.ipt  RemoteControllerBottom.ipt  RemoteControllerBottom.stl  RemoteControllerTop.ipt  Top Assembly.iam  Top Assembly.step  Top Assembly.stl
Software/: .gitignore  CommandList.md  README.md  SoftwareInstallation.md
Software/GUIs/C_GUI/: StageDriverGUI.c  StageDriverGUI.h  StageDriverGUI.uir
Software/GUIs/Python_GUI/: README.md  input_history_panel.py  logging_texthandler.py  main.py  panel_controls.py  stage_driver_controller.py  stage_driver_view.py  status_panel.py
Software/Libraries/C_Library/: StageDriver.c  StageDriver.h
Software/Libraries/picostage-driver/: README.md  pyproject.toml
Software/Libraries/picostage-driver/src/picostage/: __init__.py  command_table.py  stage_driver.py
Software/MicroManager/: PicoStageDriver.cpp  PicoStageDriver.h  PicoStageDriver.vcxproj  PicoStageDriver.vcxproj.filters
Software/Pico/Controller/: platformio.ini
Software/Pico/Controller/StageDriverController/: Common.h  DefaultParams.h  Motors.cpp  Motors.h  Parameters.cpp  Parameters.h  RemoteComm.cpp  TMC.cpp  (+9 more)
Software/Pico/Remote/: platformio.ini
Software/TestAndCalibration/: Calibration.ipynb
(+17 files in other folders)
